k8s/base/accounts.yml
apiVersion: v1
kind: Service
metadata:
  name: avidboard-accounts
  namespace: avidboard
spec:
  selector:
    app: avidboard-accounts
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avidboard-accounts
  namespace: avidboard
  labels:
    app: avidboard-accounts
spec:
  selector:
    matchLabels:
      app: avidboard-accounts
  template:
    metadata:
      labels:
        app: avidboard-accounts
    spec:
      containers:
        - name: avidboard-accounts
          image: dev.master:30841/avidboard-accounts:latest
          imagePullPolicy: Always
          command: ["npm"]
          args: ["run", "dev"]
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
