k8s/base/kanban.yml
apiVersion: v1
kind: Service
metadata:
  name: avidboard-kanban
  namespace: avidboard
spec:
  selector:
    app: avidboard-kanban
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avidboard-kanban
  namespace: avidboard
  labels:
    app: avidboard-kanban
spec:
  selector:
    matchLabels:
      app: avidboard-kanban
  template:
    metadata:
      labels:
        app: avidboard-kanban
    spec:
      containers:
        - name: avidboard-kanban
          image: dev.master/avidboard-kanban:latest
          imagePullPolicy: Always
          command: ["uvicorn"]
          args: ["app.main:app", "--host", "0.0.0.0", "--port", "8000"]
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
